--- a/primid/src/main/webapp/index.html
+++ b/primid/src/main/webapp/index.html
@@ -80,6 +80,10 @@
         <script src="src/modules/evento/evento.mod.js" type="text/javascript"></script>
         <script src="src/modules/evento/evento.ctrl.js" type="text/javascript"></script>
         <script src="src/modules/evento/evento.svc.js" type="text/javascript"></script>
+        <!-- Modulo ciudad-->
+        <script src="src/modules/ciudad/ciudad.mod.js" type="text/javascript"></script>
+        <script src="src/modules/ciudad/ciudad.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/ciudad/ciudad.svc.js" type="text/javascript"></script>
     <!--==== Js files [End] ====-->
     </head>
     <body>
