index viajero module

--- a/primid/src/main/webapp/index.html
+++ b/primid/src/main/webapp/index.html
@@ -84,6 +84,10 @@
         <script src="src/modules/ciudad/ciudad.mod.js" type="text/javascript"></script>
         <script src="src/modules/ciudad/ciudad.ctrl.js" type="text/javascript"></script>
         <script src="src/modules/ciudad/ciudad.svc.js" type="text/javascript"></script>
+        <!-- Modulo viajero-->
+        <script src="src/modules/viajero/viajero.mod.js" type="text/javascript"></script>
+        <script src="src/modules/viajero/viajero.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/viajero/viajero.svc.js" type="text/javascript"></script>
     <!--==== Js files [End] ====-->
     </head>
     <body>
