--- a/primid/src/main/webapp/src/modules/planEvento/planEvento.tpl.html
+++ b/primid/src/main/webapp/src/modules/planEvento/planEvento.tpl.html
@@ -1,27 +1,20 @@
-<div id="planEvento-header">
-    <nav class="navbar navbar-default" role="navigation">
-        <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#planEvento-navbar">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand">PlanEvento</a>
-            </div>
 
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="book-navbar">
+<section>
+<div class="container features center">
+    <div class="container-fluid">
+     <ul>
+
+
+<li>
+<div class="collapse navbar-collapse" id="book-navbar">
                 <button id="create-planEvento" class="btn btn-default navbar-btn" ng-hide="ctrl.editMode" ng-click="ctrl.createRecord()"><span class="glyphicon glyphicon-plus"></span> Create</button>
                 <button id="refresh-planEvento" class="btn btn-default navbar-btn" ng-hide="ctrl.editMode" ng-click="ctrl.fetchRecords()"><span class="glyphicon glyphicon-refresh"></span> Refresh</button>
                 <button id="save-planEvento" type="submit" form="book-form" class="btn btn-default navbar-btn" ng-show="ctrl.editMode"><span class="glyphicon glyphicon-save"></span> Save</button>
                 <button id="cancel-planEvento" type="button" form="book-form" class="btn btn-default navbar-btn" ng-show="ctrl.editMode" ng-click="form.$setPristine(); ctrl.fetchRecords();"><span class="glyphicon glyphicon-remove"></span> Cancel</button>
-            </div>
-        </div>
-    </nav>
 </div>
+</li>
+</ul>
+
 <alert ng-repeat="alert in alerts" type="{{alert.type}}" close="ctrl.closeAlert($index)" dismiss-on-timeout="5000">{{alert.msg}} </alert>
 <div ng-hide="ctrl.editMode">
     <div class="col-sm-12">
@@ -58,7 +51,7 @@
                 </div>
             </div>
             <div class="form-group col-md-12" ng-class="{'has-success': form.evento.$valid && form.evento.$dirty, 'has-error': form.evento.$invalid && (form.evento.$dirty || form.$submitted)}" >
-                <label for="editorial" class="col-md-2 control-label">Editorial</label>
+                <label for="evento" class="col-md-2 control-label">Evento</label>
                 <div class="col-md-10">
                     <select id="evento" name="evento" ng-options="rc.name for rc in eventos track by rc.id" class="form-control" type="text" ng-model="currentRecord.evento" ></select>
                 </div>
@@ -89,3 +82,4 @@
         </fieldset>
     </form>
 </div>
+</section>
