--- a/primid/src/main/webapp/src/modules/evento/evento.tpl.html
+++ b/primid/src/main/webapp/src/modules/evento/evento.tpl.html
@@ -1,7 +1,6 @@
 <!--==== Slider and Card style plugin ====-->
-<!--<script type="text/javascript" src="resources/js/jquery.baraja.js"></script>
-<script type="text/javascript" src="resources/js/jquery.vegas.min.js"></script>
-<script type="text/javascript" src="resources/js/jquery.bxslider.min.js"></script>-->
+<script type="text/javascript" src="resources/js/jquery.baraja.js"></script>
+<script type="text/javascript" src="resources/js/jquery.bxslider.min.js"></script>
 
 <!--=== Features section Starts ===-->
 
@@ -37,7 +36,7 @@
 
 							<!-- Single Feature Starts -->
 							<li class="single-feature" title="Card style" >
-                                                            <h4 class="feature-title color-scheme"> Ciudad:<span id="{{$index}}-ciudad">{{record.ciudad}}</span></h4>
+                                                            <h4 class="feature-title color-scheme"><span id="{{$index}}-ciudad">{{record.ciudad}}</span></h4>
                                                                 <div id="image" ng-if="record.image">
                                                                     <a ng-href="{{record.image}}" target="_blank"><img class="feature-image" ng-src="{{record.image}}" alt="{{record.image}}"></a>
                                                                 </div>
@@ -96,7 +95,7 @@
     </div>
 </div>
 <div ng-hide="ctrl.editMode">
-    <div class="caption">
+    <div class="row">
         <div ng-repeat="record in records">
 
                  <!--Features container Starts -->
@@ -181,10 +180,10 @@
                 </div>
             </div>
             <!--            Deberia ser un select para escoger la ciudad-->
-            <div class="form-group col-md-12" ng-class="{'has-success': !form.ciudad.$error.required && form.ciudad.$dirty, 'has-error': form.ciudad.$error.required && (form.ciudad.$dirty || form.$submitted)}" >
-                <label for="ciudad" class="col-md-2 control-label">Ciudad</label>
+            <div class="form-group col-md-12" ng-class="{'has-success': form.ciudad.$valid && form.ciudad.$dirty, 'has-error': form.ciudad.$invalid && (form.ciudad.$dirty || form.$submitted)}" >
+                <label for="ciudad" class="col-md-2 control-label">Ciudad2:</label>
                 <div class="col-md-10">
-                    <input id="ciudad" name="ciudad" class="form-control" type="text" ng-model="currentRecord.ciudad" required />
+                    <select id="ciudad" name="ciudad" ng-options="rc.ciudad for rc in ciudades track by rc.id" class="form-control" type="text" ng-model="currentRecord.ciudad" ></select>
                 </div>
             </div>
             <div class="form-group col-md-12" ng-class="{'has-success': !form.endDate.$error.required && form.endDate.$dirty, 'has-error': form.endDate.$error.required && (form.endDate.$dirty || form.$submitted)}" >
