Template cambiado, funciona controler

--- a/primid/src/main/webapp/src/modules/Itinerario/itinerario.tpl.html
+++ b/primid/src/main/webapp/src/modules/Itinerario/itinerario.tpl.html
@@ -1,172 +1,120 @@
 
-    <!--==== MailChimp Widget plugin ====-->
-
-    <script type="text/javascript" src="resources/js/jquery-1.11.1.min.js"></script>
-    <script type="text/javascript" src="resources/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="resources/js/bootstrapValidator.min.js"></script>
-    <script type="text/javascript" src="resources/js/modernizr.js"></script>
-    <script type="text/javascript" src="resources/js/jquery.easing.1.3.js"></script>
-
-    <!--==== Slider and Card style plugin ====-->
-    <script type="text/javascript" src="resources/js/jquery.baraja.js"></script>
-    <script type="text/javascript" src="resources/js/jquery.vegas.min.js"></script>
-    <script type="text/javascript" src="resources/js/jquery.bxslider.min.js"></script>
-
-    <!--==== MailChimp Widget plugin ====-->
-
-    <!--==== Scroll and navigation plugins ====-->
-    <script type="text/javascript" src="resources/js/jquery.nicescroll.min.js"></script>
-    <script type="text/javascript" src="resources/js/jquery.nav.js"></script>
-    <script type="text/javascript" src="resources/js/jquery.appear.js"></script>
-    <script type="text/javascript" src="resources/js/jquery.fitvids.js"></script>
-
-    <!--==== Custom Script files ====-->
-    <script type="text/javascript" src="resources/js/custom.js"></script>
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/responsive.css" />
-
-<div>
-<div ng-hide="ctrl.editMode" class="container step animated" data-animation="bounceInLeft" data-animation-delay="700" style="background-color:white;">
-    <div class="row">
-        <!-- Step Description Starts -->
-        <div class="col-md-8 step-desc">
-
-            <div class="col-md-10 step-details">
-                <h3 class="step-title color-scheme">Itinerarios</h3>
-
-                <!--Desde ac√° podras administrar todos tus <strong>itinerarios</strong> de forma simple y as√≠ planear las mejores <strong>vacaciones</strong> a trav√©s de todo el planeta.-->
-                <p class="step-description"> Desde ac√° podras crear, editar, valorar y comentar todos tus <strong>itinerarios</strong> de modo simple. Permitenos ayudarte a planear tus mejores <strong>vacaciones</strong> a trav√©s de todo el planeta!.</p>
-
-                <!-- <div class="container pricing"> -->
-
-                <div class="row">
-                    <!-- Intinerario1 -->
-                    <div class="col-md-3 col-sm-4 single-pricing-wrap center animated" data-animation="bounceInLeft" data-animation-delay="500">
-                        <div class="single-pricing">
-
-                            <div class="pricing-head">
-                                <h5 class="pricing-heading color-scheme">Itinerario 1</h5>
-                                <div class="price">
-
-                                    <img src="resources/images/Intinerario1.jpg" alt="Itinerario 1" />
-                                </div>
-                            </div>
-
-
-                            <div class="sign-up">
-                                <a href="#" target="iframe1" class="fancy-button button-line btn-col zoom">
-                                    <p title="Ver" style="font-size:12px">Ver &#9992</p>
-                                    <!--&#10084 corazon-->
-                                    <!--&#9992 avion -->
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Intinerario2 -->
-                    <div class="col-md-3 col-sm-4 single-pricing-wrap center animated" data-animation="bounceInLeft" data-animation-delay="700">
-                        <div class="single-pricing">
-
-                            <div class="pricing-head">
-                                <h5 class="pricing-heading color-scheme">Itinerario 2</h5>
-                                <div class="price">
-
-                                    <img src="resources/images/Intinerario2.jpg" alt="Itinerario 2" />
-                                </div>
-                            </div>
-
-
-                            <div class="sign-up">
-                                <a href="#" target="iframe1" class="fancy-button button-line btn-col zoom">
-                                    <p title="Ver" style="font-size:12px">Ver &#9992</p>
-                                    <!--&#10084 corazon-->
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Intinerario3 -->
-                    <div class="col-md-3 col-sm-4 single-pricing-wrap center animated" data-animation="bounceInLeft" data-animation-delay="900">
-                        <div class="single-pricing">
-
-                            <div class="pricing-head">
-                                <h5 class="pricing-heading color-scheme">Itinerario 3</h5>
-                                <div class="price">
-
-                                    <img src="resources/images/Intinerario3.jpg" alt="Itinerario 3" />
-                                </div>
-                            </div>
-
-
-                            <div class="sign-up">
-                                <a href="#" class="fancy-button button-line btn-col zoom">
-                                    <p title="Ver" style="font-size:12px">Ver &#9992</p>
-                                    <!--&#10084 corazon-->
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Intinerario4 -->
-                    <div class="col-md-3 col-sm-4 single-pricing-wrap center animated" data-animation="bounceInLeft" data-animation-delay="1100">
-                        <div class="single-pricing">
-
-                            <div class="pricing-head">
-                                <h5 class="pricing-heading color-scheme">Itinerario 4</h5>
-                                <div class="price">
-
-                                    <img src="resources/images/Intinerario4.jpg" alt="Itinerario 4" />
-                                </div>
-                            </div>
-
-
-                            <div class="sign-up" >
-                                <a href="#" class="fancy-button button-line btn-col zoom">
-                                    <p title="Ver" style="font-size:12px">Ver &#9992</p>
-                                    <!--&#10084 corazon-->
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-
-
-                </div>
-                <!-- </div> --> <!--<ul class="sub-steps"><--> <!-- Sub steps here --><!-->
-
-
-                </div> <!-- End step-details -->
+<p>.</p>
+<p>.</p>
+<p>.</p>
+<p>.</p>
+<p>.</p>
+<p>.</p>
+<div id="book-header">
+    <nav class="navbar navbar-default" role="navigation">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#book-navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand">Books</a>
             </div>
-            <div >
 
-                <div class="col-md-3 col-sm-6 single-pricing-wrap center animated" data-animation="bounceInLeft" data-animation-delay="900" id="idResumen">
-                    <div class="single-pricing" align="middle" >
-
-                        <div class="price-head center" >
-                            <h5 class="pricing-heading color-scheme">Itinerario 3</h5>
-                            <div class="center" >
-
-                                <img  src="resources/images/Intinerario3.jpg" alt="Itinerario 3"  style="height:200px;width:250px"/>
-                            </div>
-                        </div>
-                        <ul class="package-features">
-                            <li><span ng-repeat="record in records" class="step-description"></span>Resumen: <td id="idNombre">Vacaciones en Estambul</td></li>
-                            <li><span class="step-description"></span>Fecha Inicio:<td id="idFechaInicio">2016/03/18</td> </li>
-                            <li><span class="step-description"></span>Fecha Final: <td id="idFechaFinal">2016/03/20</td></li>
-
-                        </ul>
-
-                        <div class="sign-up">
-                            <a  ui-serf="evento" class="fancy-button button-line btn-col zoom">
-                                <p>Ver Eventos</p>
-                                <!--&#10084 corazon-->
-                            </a>
-                        </div>
-                    </div>
-                </div>
-
-
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="book-navbar">
+                <button id="create-book" class="btn btn-default navbar-btn" ng-hide="ctrl.editMode" ng-click="ctrl.createRecord()"><span class="glyphicon glyphicon-plus"></span> Create</button>
+                <button id="refresh-book" class="btn btn-default navbar-btn" ng-hide="ctrl.editMode" ng-click="ctrl.fetchRecords()"><span class="glyphicon glyphicon-refresh"></span> Refresh</button>
+                <button id="save-book" type="submit" form="book-form" class="btn btn-default navbar-btn" ng-show="ctrl.editMode"><span class="glyphicon glyphicon-save"></span> Save</button>
+                <button id="cancel-book" type="button" form="book-form" class="btn btn-default navbar-btn" ng-show="ctrl.editMode" ng-click="form.$setPristine(); ctrl.fetchRecords();"><span class="glyphicon glyphicon-remove"></span> Cancel</button>
             </div>
         </div>
-    </div>
+    </nav>
 </div>
+
+	<div class="row">
+	<!-- Step Description Starts -->
+		<div class="col-md-8 step-desc" style="background-color:white;">
+
+			<div class="col-md-10 step-details">
+				<h3 class="step-title color-scheme">Itinerarios</h3>
+
+	<!--Desde ac· podras administrar todos tus <strong>itinerarios</strong> de forma simple y asÌ planear las mejores <strong>vacaciones</strong> a travÈs de todo el planeta.-->
+				<p class="step-description"> Desde ac· podras crear, editar, valorar y comentar todos tus <strong>itinerarios</strong> de modo simple. Permitenos ayudarte a planear tus mejores <strong>vacaciones</strong> a travÈs de todo el planeta!.</p>
+			</div>
+                    <div class="col-md-4 col-sm-6 col-lg-3 well">
+                <div class="col-md-12">
+                    <div class="img-thumbnail" id="image" ng-if="record.image">
+                        <a ng-href="{{record.image}}" target="_blank"><img class="img-responsive" style="height: 20vmax;" ng-src="{{record.image}}" alt="{{record.image}}"></a>
+                    </div>
+                </div>
+                <div class="caption" >
+                    <p><strong>Name:</strong> <span id="{{$index}}-name">{{record.name}}</span></p>
+                    <p><strong>Description:</strong> <span id="{{$index}}-description">{{record.description}}</span></p>
+                    <p><strong>ISBN:</strong> <span id="{{$index}}-isbn">{{record.isbn}}</span></p>
+                    <p><strong>Publish Date:</strong> <span id="{{$index}}-publishDate">{{record.publishDate| date}}</span></p>
+
+                </div>
+                <p class="text-center">
+                    <button id="{{$index}}-edit-btn" class="btn btn-default btn-sm" ng-click="ctrl.editRecord(record)"><span class="glyphicon glyphicon-edit"></span> Edit</button>
+                    <button id="{{$index}}-delete-btn" class="btn btn-default btn-sm" ng-click="ctrl.deleteRecord(record)"><span class="glyphicon glyphicon-minus"></span> Remove</button>
+                </p>
+            </div>
+		</div>
+        <div ng-show="ctrl.editMode" class="col-md-6 well">
+    <form novalidate name="form" id="book-form" role="form" ng-submit="ctrl.saveRecord()">
+        <alert ng-messages="form.$error" type="danger" close="" ng-hide="!form.$error.required">
+            <div ng-message="required">
+                Please, Fill the required fields!
+            </div>
+        </alert>
+        <fieldset>
+            <input id="id" class="form-control" type="hidden" ng-model="currentRecord.id"/>
+            <div class="form-group col-md-12" ng-class="{'has-success': form.name.$valid && form.name.$dirty, 'has-error': form.name.$invalid && (form.name.$dirty || form.$submitted)}" >
+                <label for="name" class="col-md-2 control-label">Name</label>
+                <div class="col-md-10">
+                    <input id="name" name="name" class="form-control" type="text" ng-model="currentRecord.name" required />
+                </div>
+            </div>
+            <div class="form-group col-md-12" ng-class="{'has-success': form.description.$valid && form.description.$dirty, 'has-error': form.description.$invalid && (form.description.$dirty || form.$submitted)}" >
+                <label for="description" class="col-md-2 control-label">Description</label>
+                <div class="col-md-10">
+                    <input id="description" name="description" class="form-control" type="text" ng-model="currentRecord.description" required />
+                </div>
+            </div>
+            <div class="form-group col-md-12" ng-class="{'has-success': form.isbn.$valid && form.isbn.$dirty, 'has-error': form.isbn.$invalid && (form.isbn.$dirty || form.$submitted)}" >
+                <label for="isbn" class="col-md-2 control-label">ISBN</label>
+                <div class="col-md-10">
+                    <input id="isbn" name="isbn" class="form-control" type="text" ng-model="currentRecord.isbn" required />
+                </div>
+            </div>
+
+            <div class="form-group col-md-12" ng-class="{'has-success': form.image.$valid && form.image.$dirty, 'has-error': form.image.$invalid && (form.image.$dirty || form.$submitted)}" >
+                <label for="image" class="col-md-2 control-label">Image</label>
+                <div class="col-md-10">
+                    <input id="image" name="image" class="form-control" type="text" ng-model="currentRecord.image" required />
+                </div>
+            </div>
+
+            <div class="form-group col-md-12" ng-class="{'has-success': !form.publishDate.$error.required && form.publishDate.$dirty, 'has-error': form.publishDate.$error.required && (form.publishDate.$dirty || form.$submitted)}" >
+                <label for="publishDate" class="col-md-2 control-label">Publish Date</label>
+                <div class="col-md-10">
+                    <p class="input-group">
+                        <input type="text" id="publishDate" name="publishDate" class="form-control" ng-model="currentRecord.publishDate" ng-required="model.required" datepicker-popup is-open="opened" readonly/>
+                        <span class="input-group-btn">
+                            <button type="button" id="publishDate-datepicker" class="btn btn-default" ng-click="open($event)"><span class="glyphicon glyphicon-calendar"></span></button>
+                        </span>
+                    </p>
+                </div>
+            </div>
+        </fieldset>
+    </form>
+</div>
+
+
+
+
+
+
+
+
+	</div>
 
