--- a/primid/src/main/webapp/index.html
+++ b/primid/src/main/webapp/index.html
@@ -88,7 +88,12 @@
         <script src="src/modules/viajero/viajero.mod.js" type="text/javascript"></script>
         <script src="src/modules/viajero/viajero.ctrl.js" type="text/javascript"></script>
         <script src="src/modules/viajero/viajero.svc.js" type="text/javascript"></script>
-        
+
+        <!-- Modulo itinerario-->
+        <script src="src/modules/Itinerario/itinerario.mod.js" type="text/javascript"></script>
+        <script src="src/modules/Itinerario/itinerario.ctrl.js" type="text/javascript"></script>
+        <script src="src/modules/Itinerario/itinerario.svc.js" type="text/javascript"></script>
+        <!--==== Js files [End] ====-->
     <!--==== Js files [End] ====-->
     </head>
     <body>
